wakapi/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: app
spec:
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      containers:
      - name: wakapi
        image: ghcr.io/muety/wakapi:2.10.0
        ports:
        - containerPort: 3000
          name: web
