wakapi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wakapi-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: wakapi
  ports:
  - port: 3000
    targetPort: 3000
    name: web
